--- a/Sección 31 Node JS Express Sequelize Pug/server/views/layout/partials/testimoniales.pug
+++ b/Sección 31 Node JS Express Sequelize Pug/server/views/layout/partials/testimoniales.pug
@@ -1,4 +1,4 @@
-blockquote.text-center Lee sobre nuestros cleintes y sus experiencias
+blockquote.text-center Lee sobre nuestros clientes y sus experiencias
 .row.testimoniales
     each testimonial in testimoniales
         .col-md-6.col-lg-4.mb-4
@@ -6,6 +6,6 @@ blockquote.text-center Lee sobre nuestros cleintes y sus experiencias
                 .card-body
                     blockquote.blockquote
                         p.mb-0
-                            |#{testimonial.mensaje}
+                            | #{testimonial.mensaje}
                     footer.blockquote-footer
-                        |#{testimonial.nombre}                                
+                        | #{testimonial.nombre}                           
